--- a/style.css
+++ b/style.css
@@ -181,3 +181,12 @@ footer{
     }
 
 }
+
+@media(max-width: 700px){
+    .top-container{
+        grid-template-areas: 
+        'showcase'
+        'top-box-a' 
+        'top-box-b'        
+    }
+}
